
Slick 8.x-1.0-dev, 2016-12-06
-----------------------------
- Converted the rest of Simpletest methods into PHPUnit's.
- Fixed for coding standards.
- Ported Optimized option to clean out defaults from the stored settings.
- Added tests.

Slick 8.x-1.0-dev, 2016-11-29
-----------------------------
- Marked it Beta5.
- A few cleanups.

Slick 8.x-1.0-dev, 2016-11-26
-----------------------------
- Fixed for broken iframes when Aspect ratio is not provided.

Slick 8.x-1.0-dev, 2016-11-21
-----------------------------
- Split lightbox gallery identifier into Grid wrapper, if provided.

Slick 8.x-1.0-dev, 2016-11-17
-----------------------------
- Removed the no-longer needed SlickFormatter::getMediaSwitch() overrides as
  slick colorbox is using blazy colorbox.

Slick 8.x-1.0-dev, 2016-11-14
-----------------------------
- Fixed for colorbox regression with the recent JS move into Blazy.

Slick 8.x-1.0-dev, 2016-11-09
-----------------------------
- A few cleanups.
- Fixed for the new Grid and CSS3 Columns at field formatter settings not saved.

Slick 8.x-1.0-dev, 2016-11-01
-----------------------------
- Simplified settings.arrow.attributes to arrow_attributes.
- Simplified settings.downArrow.attributes to arrow_down_attributes.

Slick 8.x-1.0-dev, 2016-10-31
-----------------------------
- Added support for Blazy new CSS3 Columns along with Grid Foundation.
- Moved "the failsafe for deleted optionset while being used" outside Slick.php
  since it was breaking Add/Duplicate operations, till proper fix.
- Updated Slick colorbox JS file to re-use blazy.colorbox because Blazy now
  also supports Media Entity for colorbox videos.

Slick 8.x-1.0-dev, 2016-10-25
-----------------------------
- Minified please. Never commit anything when you are tired.
- Added optional "Slick Image with Media" formatter to retain VEM/ME within
  image/file ER environment if VEM/ME is installed.
- Moved Slick grid CSS foundation into Blazy for reusability outside slick, such