@@ -17,6 +17,8 @@
  * @see template_preprocess_slick_image().
  *
  * @ingroup themeable
+ *
+ * @deprecated: Just use blazy.html.twig to reduce function calls.
  */
 #}
 {% set attributes = attributes.addClass('media--slick') %}
